# human-mcp

./: .gitignore  README.md  pyproject.toml
human_mcp/: __init__.py  server.py
